Prototypical implementation of encryption support for the Parquet/DataFusion integration